force-app/main/default/objects/Knowledge__kav/fields/Acronym__c.field-meta.xml
<CustomField>
    <fullName>Acronym__c</fullName>
    <description>An abbreviation formed from the initial letters of other words and pronounced as a word (e.g. BTB, CDX ) commonly used within Client Service &amp; Implementation (CSI).</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the short name/acronym used that is associated with the title, if applicable.</inlineHelpText>
    <label>Acronym</label>
    <length>25</length>
    <type>Text</type>
</CustomField>