force-app/main/default/objects/Knowledge__kav/fields/Additional_Job_Aid_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Job_Aid_Details__c</fullName>
    <description>Continue job aid details/steps on this side of the job</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Continue job aid details/steps on this side of the job</inlineHelpText>
    <label>Additional Job Aid Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>