force-app/main/default/objects/Knowledge__kav/fields/Applications_Platforms_Tools_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Applications_Platforms_Tools_Impacted__c</fullName>
    <description>List of potential Applications, Platforms or Tools impacted by the information in this article.  Select all that apply.</description>
    <inlineHelpText>List of potential Applications, Platforms or Tools impacted by the information in this article.  Select all that apply.</inlineHelpText>
    <label>Applications, Platforms &amp; Tools Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACIS</fullName>
            </value>
            <value>
                <fullName>BTB</fullName>
            </value>
            <value>
                <fullName>CAMS</fullName>
            </value>
            <value>
                <fullName>FACETS</fullName>
            </value>
            <value>
                <fullName>iBAAG</fullName>
            </value>
            <value>
                <fullName>ORBIT</fullName>
            </value>
            <value>
                <fullName>PhBIT</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Sold Case Checklist</fullName>
            </value>
            <value>
                <fullName>TOPS</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>