force-app/main/default/objects/Knowledge__kav/fields/Article_Owner__c.field-meta.xml
<CustomField>
    <fullName>Article_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Article Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>