force-app/main/default/objects/Knowledge__kav/fields/Audience_s_Implacted__c.field-meta.xml
<CustomField>
    <fullName>Audience_s_Implacted__c</fullName>
    <description>List of potential Audience(s) that may be impacted by the information contained in this article.  Select all that apply.</description>
    <inlineHelpText>List of potential Audience(s) that may be impacted by the information contained in this article.  Select all that apply.</inlineHelpText>
    <label>Audience(s) Implacted:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Analyst</fullName>
            </value>
            <value>
                <fullName>Client Manager</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Customer Care Professional</fullName>
            </value>
            <value>
                <fullName>Eligibility Analyst</fullName>
            </value>
            <value>
                <fullName>Electronic Eligibility Analyst</fullName>
            </value>
            <value>
                <fullName>iBAAG Analyst</fullName>
            </value>
            <value>
                <fullName>Implementation Specialist</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Specialty Account Management</fullName>
            </value>
            <value>
                <fullName>Strategic Consulting Executive</fullName>
            </value>
            <value>
                <fullName>TOPS Analyst</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>