force-app/main/default/objects/Knowledge__kav/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <description>Details around the background of the content contained in this article.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter brief details around the background of the content contained in this article.</inlineHelpText>
    <label>Background</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>