force-app/main/default/objects/Knowledge__kav/fields/Contact_SME__c.field-meta.xml
<CustomField>
    <fullName>Contact_SME__c</fullName>
    <description>Individual who is considered to be a Subject Matter Expert (SME) on a specific topic.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the name of an individual who is considered to be a Subject Matter Expert (SME) on this topic.</inlineHelpText>
    <label>Contact/SME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>