force-app/main/default/objects/Knowledge__kav/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contacts</label>
    <type>TextArea</type>
</CustomField>