force-app/main/default/objects/Knowledge__kav/fields/Contacts_or_SMEs__c.field-meta.xml
<CustomField>
    <fullName>Contacts_or_SMEs__c</fullName>
    <description>List contacts, resources, or subject matter experts here along with hyperlinks to each resource or enter phone number/email address.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>List contacts, resources, or subject matter experts here along with hyperlinks to each resource or enter phone number/email address.</inlineHelpText>
    <label>Contacts or SMEs</label>
    <type>TextArea</type>
</CustomField>