force-app/main/default/objects/Knowledge__kav/fields/Coverage_Type_s_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type_s_Impacted__c</fullName>
    <description>List of potential Coverage Type(s) impacted by the information contained in this article.  Select all that apply.</description>
    <inlineHelpText>List of potential Coverage Type(s) impacted by the information contained in this article.  Select all that apply.</inlineHelpText>
    <label>Coverage Type(s) Impacted:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>MH/SUD</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>