force-app/main/default/objects/Knowledge__kav/fields/External_Link_RichText__c.field-meta.xml
<CustomField>
    <fullName>External_Link_RichText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Link</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>