force-app/main/default/objects/Knowledge__kav/fields/Financial_Arrangement_s_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Financial_Arrangement_s_Impacted__c</fullName>
    <description>Select the area(s) of Financial Arrangement that is impacted by the information contained in this article.  Select all that apply.</description>
    <inlineHelpText>Select the area(s) of Financial Arrangement that is impacted by the information contained in this article.  Select all that apply.</inlineHelpText>
    <label>Financial Arrangement(s) Impacted:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Services Only (ASO)</fullName>
            </value>
            <value>
                <fullName>Fully Insured</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>