force-app/main/default/objects/Knowledge__kav/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instructions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>