force-app/main/default/objects/Knowledge__kav/fields/Job_Aid_Details__c.field-meta.xml
<CustomField>
    <fullName>Job_Aid_Details__c</fullName>
    <description>Enter details/steps the user should know to complete the purpose of the job aid.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter details/steps the user should know to complete the purpose of the job aid.</inlineHelpText>
    <label>Job Aid Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>