force-app/main/default/objects/Knowledge__kav/fields/Key_points__c.field-meta.xml
<CustomField>
    <fullName>Key_points__c</fullName>
    <description>State key points that the end user will gain from the information contained in this article.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Briefly state the key points the end user will gain from the information contained in this article.</inlineHelpText>
    <label>Key points</label>
    <type>TextArea</type>
</CustomField>