force-app/main/default/objects/Knowledge__kav/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <description>Detailed description/definition of the topic.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Overview</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>