force-app/main/default/objects/Knowledge__kav/fields/Presenter__c.field-meta.xml
<CustomField>
    <fullName>Presenter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Presenter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>