force-app/main/default/objects/Knowledge__kav/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>State the purpose of the article.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide brief details around the purpose of the article.</inlineHelpText>
    <label>Purpose</label>
    <type>TextArea</type>
</CustomField>