force-app/main/default/objects/Knowledge__kav/fields/Recordings__c.field-meta.xml
<CustomField>
    <fullName>Recordings__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recordings</label>
    <type>Url</type>
</CustomField>