force-app/main/default/objects/Knowledge__kav/fields/Security_Information_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Security_Information_Attachments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Security Information Attachments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>