force-app/main/default/objects/Knowledge__kav/fields/Security_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Security_Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Security Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>