force-app/main/default/objects/Knowledge__kav/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>