force-app/main/default/objects/Knowledge__kav/fields/Site_System_Application_Link__c.field-meta.xml
<CustomField>
    <fullName>Site_System_Application_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Site/System/Application Link</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>