force-app/main/default/objects/Knowledge__kav/fields/Supporting_Content__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Content__c</fullName>
    <description>Listing of available content and resources related to specific topic.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Supporting Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>