force-app/main/default/objects/Knowledge__kav/fields/System_Link__c.field-meta.xml
<CustomField>
    <fullName>System_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System Link</label>
    <type>Url</type>
</CustomField>