force-app/main/default/objects/Knowledge__kav/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2020-2021 Technology Initiatives</fullName>
            </value>
            <value>
                <fullName>3D Mammography</fullName>
            </value>
            <value>
                <fullName>8000 Jobs</fullName>
            </value>
            <value>
                <fullName>AAHE (Aon Hewitt Exchange)</fullName>
            </value>
            <value>
                <fullName>AARS (Advanced Analytics and Recovery Services)</fullName>
            </value>
            <value>
                <fullName>Accumulators</fullName>
            </value>
            <value>
                <fullName>ACIS</fullName>
                <label>ACIS (Automated Customer Implementation System)</label>
            </value>
            <value>
                <fullName>Acquisitions</fullName>
            </value>
            <value>
                <fullName>Advocate4Me</fullName>
            </value>
            <value>
                <fullName>AMT</fullName>
                <label>AMT (Account Management Team)</label>
            </value>
            <value>
                <fullName>AOP (Administrative Options Portal)</fullName>
            </value>
            <value>
                <fullName>Appeals</fullName>
            </value>
            <value>
                <fullName>Apple Fitness +</fullName>
            </value>
            <value>
                <fullName>ASO (Administrative Services Only)</fullName>
            </value>
            <value>
                <fullName>Asthma Disease Management Program</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
                <label>Audit - Cyber Security / IT</label>
            </value>
            <value>
                <fullName>Audit - Department of Labor (DOL)</fullName>
            </value>
            <value>
                <fullName>AXIS</fullName>
            </value>
            <value>
                <fullName>BAR (Benefit Administration Review)</fullName>
            </value>
            <value>
                <fullName>Benefit Clarifications</fullName>
            </value>
            <value>
                <fullName>BIA</fullName>
                <label>BIA (Benefit Implementation Audit)</label>
            </value>
            <value>
                <fullName>BIC Portal Review</fullName>
            </value>
            <value>
                <fullName>BRCA (Breast Cancer Susceptibility Genetic Testing)</fullName>
            </value>
            <value>
                <fullName>BRMS (Billing &amp; Receivable Management Solution)</fullName>
            </value>
            <value>
                <fullName>Bariatric Resource Services (BRS)</fullName>
                <label>BRS (Bariatric Resource Services)</label>
            </value>
            <value>
                <fullName>BTB</fullName>
                <label>BTB (Benefit Template Builder)</label>
            </value>
            <value>
                <fullName>CAMS (Consumer Account Management System)</fullName>
            </value>
            <value>
                <fullName>Cancellations</fullName>
            </value>
            <value>
                <fullName>Cancer Resource Services &amp; Cancer Support Program</fullName>
            </value>
            <value>
                <fullName>Cardiology Notification Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>