force-app/main/default/objects/Knowledge__kav/fields/Topic_Title__c.field-meta.xml
<CustomField>
    <fullName>Topic_Title__c</fullName>
    <description>The completely spelled out title of the topic that is being represented by the content.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Spell out the full title of the topic. If there is an associated acronym, please make sure all letters are represented.</inlineHelpText>
    <label>Topic Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>