force-app/main/default/objects/Knowledge__kav/fields/Training_Content__c.field-meta.xml
<CustomField>
    <fullName>Training_Content__c</fullName>
    <description>Training content available for related to topic.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Training Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>