force-app/main/default/objects/Knowledge__kav/fields/URL_Field__c.field-meta.xml
<CustomField>
    <fullName>URL_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL Field</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>