force-app/main/default/objects/Knowledge__kav/recordTypes/CM_Annual_Schedule.recordType-meta.xml
<RecordType>
    <fullName>CM_Annual_Schedule</fullName>
    <active>false</active>
    <label>CM Annual Schedule</label>
</RecordType>