force-app/main/default/objects/Knowledge__kav/recordTypes/Forms.recordType-meta.xml
<RecordType>
    <fullName>Forms</fullName>
    <active>false</active>
    <label>Forms</label>
</RecordType>