force-app/main/default/objects/Knowledge__kav/recordTypes/How_To_s.recordType-meta.xml
<RecordType>
    <fullName>How_To_s</fullName>
    <active>false</active>
    <description>Documents that assist an end user through a step by step process</description>
    <label>How To&apos;s</label>
</RecordType>