force-app/main/default/objects/Knowledge__kav/recordTypes/Job_Aids.recordType-meta.xml
<RecordType>
    <fullName>Job_Aids</fullName>
    <active>false</active>
    <label>Job Aids</label>
</RecordType>