force-app/main/default/objects/Knowledge__kav/recordTypes/Lunch_N_Learn.recordType-meta.xml
<RecordType>
    <fullName>Lunch_N_Learn</fullName>
    <active>true</active>
    <label>Lunch N Learn</label>
</RecordType>