force-app/main/default/objects/Knowledge__kav/recordTypes/P_P.recordType-meta.xml
<RecordType>
    <fullName>P_P</fullName>
    <active>true</active>
    <label>P&amp;P</label>
</RecordType>