force-app/main/default/objects/Knowledge__kav/recordTypes/Readiness.recordType-meta.xml
<RecordType>
    <fullName>Readiness</fullName>
    <active>false</active>
    <label>Readiness</label>
</RecordType>