force-app/main/default/objects/Knowledge__kav/recordTypes/Salesforce_Guide.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Guide</fullName>
    <active>false</active>
    <label>Salesforce Guide</label>
</RecordType>