force-app/main/default/objects/Knowledge__kav/recordTypes/SBS_Communications.recordType-meta.xml
<RecordType>
    <fullName>SBS_Communications</fullName>
    <active>true</active>
    <label>SBS Communications</label>
</RecordType>