force-app/main/default/objects/Knowledge__kav/recordTypes/SME_Grid.recordType-meta.xml
<RecordType>
    <fullName>SME_Grid</fullName>
    <active>false</active>
    <label>SME Grid</label>
</RecordType>