force-app/main/default/objects/Knowledge__kav/recordTypes/Terms_Acronyms.recordType-meta.xml
<RecordType>
    <fullName>Terms_Acronyms</fullName>
    <active>false</active>
    <label>Terms &amp; Acronyms</label>
</RecordType>