force-app/main/default/objects/Knowledge__kav/recordTypes/Topics_Page.recordType-meta.xml
<RecordType>
    <fullName>Topics_Page</fullName>
    <active>true</active>
    <description>Article page that contains a collection of information related to a specific topic.</description>
    <label>Topics Page</label>
</RecordType>