force-app/main/default/objects/Knowledge__kav/recordTypes/Websites_Systems.recordType-meta.xml
<RecordType>
    <fullName>Websites_Systems</fullName>
    <active>false</active>
    <label>Websites &amp; Systems</label>
</RecordType>