force-app/main/default/objects/Knowledge__kav/listViews/CM_Annual_Schedule.listView-meta.xml
<ListView>
    <fullName>CM_Annual_Schedule</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>CM Annual Schedule</label>
</ListView>